fix(button-component): button for toggle theme overflow of main container

--- a/apps/button-component/src/App.scss
+++ b/apps/button-component/src/App.scss
@@ -1,4 +1,6 @@
 #root {
+  position: relative;
+
   max-width: 1280px;
   margin: 0 auto;
 }
@@ -44,6 +46,6 @@ footer {
 
 .theme-switcher {
   position: absolute;
-  top: 10px;
-  right: 10px;
+  top: 5px;
+  right: 30px;
 }
